Implementado ContextoDeDados Modificado ModuloChamdo

--- a/GestaoDeEquipamentos.ConsoleApp/GestaoDeEquipamentos.ConsoleApp.csproj
+++ b/GestaoDeEquipamentos.ConsoleApp/GestaoDeEquipamentos.ConsoleApp.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="GestaoDeEquipamentos\ConsoleApp\" />
+    <Compile Remove="GestaoDeEquipamentos\**" />
+    <EmbeddedResource Remove="GestaoDeEquipamentos\**" />
+    <None Remove="GestaoDeEquipamentos\**" />
   </ItemGroup>
 
 </Project>
