Corrigido erro de carregamento de arquivos staticos

--- a/GestaoDeEquipamentos.ConsoleApp/GestaoDeEquipamentos.ConsoleApp.csproj
+++ b/GestaoDeEquipamentos.ConsoleApp/GestaoDeEquipamentos.ConsoleApp.csproj
@@ -13,4 +13,8 @@
     <None Remove="GestaoDeEquipamentos\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
